<resources>
    <string name="app_name">ScanMan</string>
    <string name="no_documents">Keine Dokumente</string>
    <string name="no_created_documents">Keine eigenen Dokumente</string>
    <string name="no_shared_documents">Keine geteilten Dokumente</string>
    <string name="search">Dokument suchen</string>
    <string name="search_hint">Dokument suchen…</string>
    <string name="stats">Statistik</string>
    <string name="settings">Einstellungen</string>
    <string name="sort">Dokumente sortieren</string>
    <string name="all_documents">Alle Dokumente</string>
    <string name="my_documents">Meine Dokumente</string>
    <string name="shared_documents">Geteilte Dokumente</string>
    <string name="delete_document">Dokument löschen?</string>
    <string name="delete_documents">%1$d Dokumente löschen?</string>
    <!-- Login -->
    <string name="title_activity_login">Anmelden</string>
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">Passwort</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_repeat_password">Passwort wiederholen</string>
    <string name="action_login">Anmelden</string>
    <string name="action_sign_up">Registrieren</string>
    <string name="action_no_account_yet">Noch kein Account? Jetzt registrieren.</string>
    <string name="error_invalid_email">Ungültige E-Mail-Adresse</string>
    <string name="error_invalid_name">Ungültiger Name</string>
    <string name="error_invalid_password">Das Passwort muss mindestens 6 Zeichen lang sein.</string>
    <string name="error_unequal_passwords">Die Passwörter stimmen nicht überein.</string>
    <string name="login_welcome_back">Willkommen zurück!</string>
    <string name="login_failed">Anmeldung fehlgeschlagen.</string>
    <string name="sign_up_failed">Registrierung fehlgeschlagen.</string>
    <!-- Settings -->
    <string name="logout">Abmelden</string>
    <!-- EditDocument -->
    <string name="exportDocument">Exportieren</string>
    <string name="shareDocument">Freigeben</string>
    <string name="exitEditDocument">Sie verlassen das Dokument</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="saveDocuments">Dokument speichern?</string>
    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete">Löschen</string>
    <string name="delete_image">Bild löschen?</string>
    <string name="delete_images">%1$d Bilder löschen?</string>
    <string name="selected">ausgewählt</string>
    <string name="send_with">Senden via</string>
    <string name="share">Teilen</string>
    <string name="action_not_possible">Aktion nicht möglich!</string>
    <string name="no_application">Auf ihrem Gerät ist keine Applikation zum Ausführen!</string>
    <string name="your_link">Ihr Link</string>
    <string name="copy_to_clipboard">In Zwischenablage kopieren</string>
    <string name="title">Titel</string>
    <string name="tags">Tags</string>
    <string name="title_hint">Titel für das Dokument</string>
    <string name="tags_hint">Durch Leerzeichen getrennte Schlagworte</string>
    <!-- Stats -->
    <string name="stats_title">Statistik</string>
    <string name="stats_close">Schließen</string>
    <string name="info">Informationen</string>
    <string name="created_at">Erstellt am</string>
    <string name="last_update_at">Zuletzt geändert am</string>
    <string name="number_of_users">Anzahl an berechtigten Zweitnutzern</string>
    <string name="number_of_images">Anzahl an Aufnahmen</string>
    <string name="ok">OK</string>
    <string name="count_with_bytes">%1$d (%2$s)</string>
    <string name="count_of_created_documents">Anzahl erstellter Dokumente</string>
    <string name="count_of_documents_shared_with_others">Anzahl geteilter Dokumente</string>
    <string name="count_of_shared_documents">Anzahl mit mir geteilter Dokumente</string>
    <string name="count_of_all_documents">Gesamtzahl an Dokumenten</string>
    <string name="added_new_document">Dokument hinzugefügt</string>
    <string name="already_joined_document">Sie sind dem Dokument bereits beigetreten</string>
    <string name="please_log_in">Bitte einloggen</string>
    <string name="no_pictures">Nicht möglich, da Sie noch keine Bilder hinzugefügt haben.</string>
    <string name="document_owner">Sie sind bereits der Besitzer des Dokumentes</string>
    <!-- ViewImage -->
    <string name="editImage">Bild bearbeiten</string>
</resources>
