<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activity.DocumentsListsActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_search_48dp"
        android:title="@string/search"

        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_menu_sort_48dp"
        app:showAsAction="ifRoom"
        android:title="@string/sort"/>

    <item
        android:id="@+id/action_stats"
        app:showAsAction="never"
        android:title="@string/stats"/>
    <item
        android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="@string/settings"/>

</menu>