<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textColor="#000000"
        android:text="Test"
        android:textSize="20sp"
        android:paddingBottom="18dp"
        android:layout_alignParentTop="true"/>

    <!-- Creation Date -->
    <TextView
        android:id="@+id/created_at_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/created_at"
        android:layout_marginTop="18dp"
        android:textColor="#80000000"
        android:textSize="14sp"
        android:layout_below="@+id/title"/>

    <TextView
        android:id="@+id/created_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_below="@+id/created_at_title"/>

    <!-- Last Update Date -->
    <TextView
        android:id="@+id/last_update_at_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/last_update_at"
        android:textColor="#80000000"
        android:textSize="14sp"
        android:layout_below="@+id/created_at"/>

    <TextView
        android:id="@+id/last_update_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_below="@+id/last_update_at_title"/>


    <!-- Number of Users -->
    <TextView
        android:id="@+id/number_of_users_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/number_of_users"
        android:textColor="#80000000"
        android:textSize="14sp"
        android:layout_below="@+id/last_update_at"/>


    <TextView
        android:id="@+id/number_of_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_below="@+id/number_of_users_title"/>


    <!-- Number of Images -->
    <TextView
        android:id="@+id/number_of_images_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/number_of_images"
        android:textColor="#80000000"
        android:textSize="14sp"
        android:layout_below="@+id/number_of_users"/>


    <TextView
        android:id="@+id/number_of_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_below="@+id/number_of_images_title"/>


    <Button
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/ok"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/number_of_images" />


</RelativeLayout>